Added link to github, updated README.md

--- a/user_manual/Používateľská príručka.tex
+++ b/user_manual/Používateľská príručka.tex
@@ -312,4 +312,8 @@ p.saveHTMLTree("../app/res/trees/tree.html"); // subor otvorit vo webovom prehli
 p.printTrees(); // vypise stromy do konzoly
 console.log(p.stringifyTree()); // vypise XML do konzoly
 \end{lstlisting}
+
+\bigskip
+\noindent Aktuálne zdrojové kódy: \ \ {\href{https://github.com/MartinHeinz/syntactic-parser}{\texttt{https://github.com/MartinHeinz/syntactic-parser}}  \\
+
 \end{document}
